--- a/Bus/busMap.html
+++ b/Bus/busMap.html
@@ -29,7 +29,7 @@
     <script src="./Scripts/jquery-3.3.1.js"></script>
     <script src="./Scripts/bootstrap.js"></script>
     <script src="./js/busGeolocation.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAtM83_HNs2MhPvu2YnahlOEzrnntmAJI&callback=getBusGeolocation"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAtM83_HNs2MhPvu2YnahlOEzrnntmAJI&callback=initMap"></script>
 </body>
 
 </html>
