--- a/Bus/busRouteInfo.html
+++ b/Bus/busRouteInfo.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link" href="./index.html">公車路線</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="./busMap.html">附近站牌</a>
+        </li>
+    </ul>
     <h1 style="text-align:center">路線資訊</h1>
     <div class="container">
         <h2 style="text-align:center" id="busRoute"></h2>
@@ -20,8 +28,8 @@
             <button type="button" class="btn btn-sm" id="refresh">更新</button>
         </div>
         <div class="text-center">
-            <button type="button" class="col-5 btn btn-primary" id="btnGo">去程</button>
-            <button type="button" class="col-5 btn btn-secondary" id="btnBack">回程</button>
+            <button type="button" class="col-5 btn btn-outline-primary" id="btnGo">去程</button>
+            <button type="button" class="col-5 btn btn-outline-primary" id="btnBack">回程</button>
         </div>
         <div class="list-group" id="list"></div>
     </div>
