--- a/Bus/index.html
+++ b/Bus/index.html
@@ -8,13 +8,21 @@
 
     <link rel="stylesheet" href="./Content/bootstrap.css">
 
-    <title>公車動態</title>
+    <title>公車路線</title>
 </head>
 
 <body>
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link" href="./index.html">公車路線</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="./busMap.html">附近站牌</a>
+        </li>
+    </ul>
     <div class="container">
         <header>
-            <h1 style="text-align:center">公車動態</h1>
+            <h1 style="text-align:center">公車路線</h1>
             <div class="input-group">
                 <input type="text" class="form-control" id="busSearch" placeholder="請輸入欲搜尋之路線">
                 <div class="input-group-append">
