更新時間倒數部分加入更新等待中

--- a/Bus/busMap.html
+++ b/Bus/busMap.html
@@ -34,7 +34,7 @@
         <div id="map"></div>
         <h2 style="text-align:center" id="stopName"></h2>
         <div class="d-flex justify-content-end">
-            <h5 class="d-inline" id="time">於0秒前更新</h5>
+            <h5 class="d-inline" id="time">等待站牌資訊載入中...</h5>
             <button type="button" class="btn btn-sm" id="refresh">更新</button>
         </div>
         <div class="list-group" id="list"></div>
