--- a/Bus/busRouteInfo.html
+++ b/Bus/busRouteInfo.html
@@ -24,7 +24,7 @@
     <div class="container">
         <h2 style="text-align:center" id="busRoute"></h2>
         <div class="d-flex justify-content-end">
-            <h5 class="d-inline" id="time">於0秒前更新</h5>
+            <h5 class="d-inline" id="time">資料更新中...</h5>
             <button type="button" class="btn btn-sm" id="refresh">更新</button>
         </div>
         <div class="text-center">
